[package]
name = "rust_demo"
version = "0.1.0"
authors = ["xiongwei.zhu <zhuxiongwei@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
regex = "1.3.1"
tokio = "0.2.0-alpha.6"
hyper = "0.13.0-alpha.4"
hyper-tls = "0.4.0-alpha.4"

[[bin]]
name = "ticket_util"
path = "src/bin/ticket_util.rs"
