[package]
name = "rust_demo"
version = "0.1.0"
authors = ["xiongwei.zhu <zhuxiongwei@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.4.0"
regex = "1.3.1"
hyper = "0.13.1"
hyper-tls = "0.4.0"
time = "0.1.42"
crypto-hash = "0.3.4"


[[bin]]
name = "ticket_util"
path = "src/bin/ticket_util.rs"

[[bin]]
name = "blockchain"
path = "src/bin/blockchain.rs"
