[package]
name = "rust_demo"
version = "0.1.0"
authors = ["xiongwei.zhu <zhuxiongwei@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
async-std = "1.4.0"
time = "0.2.6"
crypto-hash = "0.3.4"


[[bin]]
name = "blockchain"
path = "src/bin/blockchain.rs"
